improved fix for footer overflow (#367, #375), update default footer template

--- a/projectroles/static/projectroles/css/projectroles.css
+++ b/projectroles/static/projectroles/css/projectroles.css
@@ -157,11 +157,16 @@ div.sodar-page-container {
 
 .sodar-footer {
   width: 100%;
-  height: 36px;
+  min-height: 36px;
   line-height: 36px;
   margin: 0;
+  padding-left: 6px;
+  padding-right: 6px;
   background-color: #f5f5f5;
-  overflow-y: hidden;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 
